--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@trpc/client": "^10.0.0-alpha.46",
+    "@trpc/next": "^10.0.0-alpha.46",
+    "@trpc/react": "^10.0.0-alpha.46",
+    "@trpc/server": "^10.0.0-alpha.46",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "18.7.2",
