--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "db-init": "prisma db push"
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.2.1",
     "@trpc/client": "^10.0.0-alpha.46",
     "@trpc/next": "^10.0.0-alpha.46",
     "@trpc/react": "^10.0.0-alpha.46",
     "@trpc/server": "^10.0.0-alpha.46",
     "currency-symbol-map": "^5.1.0",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.9.1",
@@ -30,6 +35,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   },
