--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "baseUrl": ".",
     "paths": {
       "@env/*": ["src/env/*"],
+      "@pages/*": ["src/pages/*"],
       "@server/*": ["src/server/*"],
       "@utils/*": ["src/utils/*"]
     }
